--- a/study01/study01.html
+++ b/study01/study01.html
@@ -10,6 +10,8 @@
     <h1>Pessoas que entraram:</h1>
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">Incrementar</button>
+    <button id="reset-btn" onclick="reset()">Resetar</button>
+    <button id="save-btn" onclick="save()">Save</button>
     <script src="script.js"></script>
     
 </body>
