--- a/aulas/aula 01/study01/study01.html
+++ b/aulas/aula 01/study01/study01.html
@@ -7,11 +7,16 @@
     <title>Contador - JS</title>
 </head>
 <body>
+    <p id="welcome-el"></p>
     <h1>Pessoas que entraram:</h1>
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">Incrementar</button>
     <button id="reset-btn" onclick="reset()">Resetar</button>
     <button id="save-btn" onclick="save()">Save</button>
+    <p>Registro das pessoas:</p>
+    <p id="save-el"></p>
+
+    
     <script src="script.js"></script>
     
 </body>
