--- a/aulas/study01/exerc01.html
+++ b/aulas/study01/exerc01.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <h1>exercício 01</h1>
+    <button id="comprar-btn" onclick="message()">comprar</button>
+    <p id="error"></p>
+
+    <span id="num1-el"></span>
+        <span id="num2-el"></span>
+        <br>
+        <button onclick="add()">Add</button>
+        <button onclick="subtract()">Subtract</button>
+        <button onclick="divide()">Divide</button>
+        <button onclick="multiply()">Multiply</button>
+        <br>
+        <span id="sum-el">Sum: </span>
     <script src="exerc01.js"></script>
     
 </body>
