--- a/aulas/study01/exerc01.html
+++ b/aulas/study01/exerc01.html
@@ -10,7 +10,9 @@
     <button id="comprar-btn" onclick="message()">comprar</button>
     <p id="error"></p>
 
-    <span id="num1-el"></span>
+    <h1>exercício 02</h1>
+
+        <span id="num1-el"></span>
         <span id="num2-el"></span>
         <br>
         <button onclick="add()">Add</button>
