--- a/aulas/study02/exerc02.html
+++ b/aulas/study02/exerc02.html
@@ -12,6 +12,7 @@
     <p id="cards-el">Cards:</p>
     <p id="sum-el">Sum: </p>
     <button id="btn-el" onclick="startGame()">START GAME</button>
+    <button id="btnCd-el" onclick="newCard()">NEW CARD</button>
     <script src="study02.js"></script>
 </body>
 </html>
