operadores lógicos e condicionais

--- a/aulas/study02/exerc02.html
+++ b/aulas/study02/exerc02.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Blackjack</h1>
-    <p id="message-el">Want to play a round?</p>
-    <p id="cards-el">Cards:</p>
-    <p id="sum-el">Sum: </p>
-    <button id="btn-el" onclick="startGame()">START GAME</button>
-    <button id="btnCd-el" onclick="newCard()">NEW CARD</button>
+    <p id="message-el">Quer jogar uma rodada?</p>
+    <p id="cards-el">Cartas:</p>
+    <p id="sum-el">Total: </p>
+    <button id="btn-el" onclick="startGame()">INICIAR JOGO</button>
+    <button id="btnCd-el" onclick="newCard()">NOVA CARTA</button>
     <script src="study02.js"></script>
 </body>
 </html>
