--- a/aulas/study02/exerc02.html
+++ b/aulas/study02/exerc02.html
@@ -13,6 +13,7 @@
     <p id="sum-el">Total: </p>
     <button id="btn-el" onclick="startGame()">INICIAR JOGO</button>
     <button id="btnCd-el" onclick="newCard()">NOVA CARTA</button>
+    <p id="player-el"></p>
     <script src="study02.js"></script>
 </body>
 </html>
