--- a/aulas/study02/exerc02.html
+++ b/aulas/study02/exerc02.html
@@ -13,7 +13,9 @@
     <p id="sum-el">Total: </p>
     <button id="btn-el" onclick="startGame()">INICIAR JOGO</button>
     <button id="btnCd-el" onclick="newCard()">NOVA CARTA</button>
-    <p id="player-el"></p>
+    <p>Informe seu nome:</p>
+    <input id="alias" type="text"> <button id="str-el">Vamos lá!</button>
+    <ul id="player-el"></ul>
     <script src="study02.js"></script>
 </body>
 </html>
